--- a/w3.html
+++ b/w3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/gnarpy.jpg">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Login</title>
 
     <!-- Import Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -71,11 +71,6 @@
             text-align: center;
             border-top: 5px rgba(255, 255, 255, 0.5) solid;
             width: 100%;
-            color: #fff !important;
-        }
-
-        footer p {
-            margin-bottom: 4px !important;
         }
 
         .footer-links a {
@@ -98,6 +93,11 @@
         .nav-link {
             color: white !important;
             /* White text for the navbar links */
+        }
+
+        .navbar-brand img {
+            border: 2px solid #a6abf3;
+            /* Lighter blue border around logo */
         }
 
         .nav-link:hover {
@@ -128,7 +128,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="/static/logo-but-its-white.png" alt="Gnarp Catalog" width="120" height="45">
+                <img src="/static/logo.png" alt="Gnarp Catalog" width="60" height="60">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -150,21 +150,14 @@
             </div>
             <div class="d-flex align-items-center">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    {% if name %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user">{{ name }}</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                    {% else %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
                     </li>
-                    {% endif %}
+
                 </ul>
             </div>
         </div>
@@ -172,11 +165,24 @@
 
     <!-- Main Content Area -->
     <main>
-        {% block content %}{% endblock %}
+
+        <h1>Login to Your Account</h1>
+        <form method="POST" action="/login">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username" required="">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required="">
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+
+
     </main>
 
     <!-- Footer -->
-    {% if footer %}
     <footer>
         <div class="container">
             <div class="row">
@@ -250,7 +256,8 @@
             </div>
         </div>
     </footer>
-    {%endif%}
+
+
 
 
 </body>
