--- a/w3.html
+++ b/w3.html
@@ -1,265 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/gnarpy.jpg">
-    <title>Login</title>
-
-    <!-- Import Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-    <!-- Custom CSS for navbar, footer, and background -->
-    <style>
-        /* Default (light) mode */
-        body {
-            background-color: #dddeee;
-            color: #000;
-        }
-
-        /* Dark mode */
-        body.dark-mode {
-            background-color: #1f1f1f;
-            color: #fff;
-        }
-
-        /* Additional styling for other elements in dark mode */
-        .navbar,
-        footer {
-            background-color: #434ccc;
-        }
-
-        .navbar.dark-mode,
-        footer.dark-mode {
-            background-color: #1f25a5;
-        }
-
-        .modal-content.dark-mode {
-            background-color: #434ccc;
-            color: #fff;
-        }
-
-        header {
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100px;
-            padding: 10px;
-            width: 100%;
-            background-color: #1f25a5;
-            /* Dark blue for header */
-            display: flex;
-            align-items: center;
-            border-bottom: 5px rgba(255, 255, 255, 0.5) solid;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0;
-            background-color: #1f25a5;
-            /* Dark blue for footer */
-            padding: 20px;
-            text-align: center;
-            border-top: 5px rgba(255, 255, 255, 0.5) solid;
-            width: 100%;
-        }
-
-        .footer-links a {
-            margin: 0 10px;
-            color: #a6abf3;
-            /* Lighter blue accent for footer links */
-            text-decoration: none;
-        }
-
-        .footer-links a:hover {
-            text-decoration: underline;
-        }
-
-        .navbar {
-            background-color: #434ccc;
-            /* Light blue for navbar */
-        }
-
-        .navbar-brand,
-        .nav-link {
-            color: white !important;
-            /* White text for the navbar links */
-        }
-
-        .navbar-brand img {
-            border: 2px solid #a6abf3;
-            /* Lighter blue border around logo */
-        }
-
-        .nav-link:hover {
-            color: #a6abf3 !important;
-            /* Lighter blue on hover for navbar links */
-        }
-
-        .navbar-toggler {
-            border-color: #a6abf3;
-            /* Toggler button color */
-        }
-
-        .navbar-toggler-icon {
-            background-color: #a6abf3;
-            /* Toggler icon color */
-        }
-
-        a {
-            color: inherit;
-        }
-    </style>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login & Register</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      margin: 40px;
+      color: #333;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+    form {
+      max-width: 400px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    label {
+      font-size: 14px;
+      font-weight: bold;
+    }
+    input {
+      border: 1px solid #ccc;
+      padding: 10px;
+      font-size: 14px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    input:focus {
+      outline: none;
+      border: 1px solid #007bff;
+    }
+    button {
+      padding: 12px 10px;
+      font-size: 14px;
+      font-weight: bold;
+      cursor: pointer;
+      border: 1px solid transparent;
+      transition: background-color 0.3s ease, border-color 0.3s ease;
+    }
+    .login-btn, .register-btn {
+      background-color: #007bff;
+      color: #fff;
+      border: 1px solid #0056b3;
+    }
+    .login-btn:hover, .register-btn:hover {
+      background-color: #0056b3;
+    }
+    .alt-link {
+      text-align: center;
+      font-size: 14px;
+      color: #007bff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    .alt-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
+  <!-- Login Form -->
+  <h1>Login</h1>
+  <form>
+    <label for="login-email">Email</label>
+    <input type="email" id="login-email" name="login-email" placeholder="Enter your email">
 
-    <!-- Header / Navbar -->
-    <nav class="navbar sticky-top navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <img src="/static/logo.png" alt="Gnarp Catalog" width="60" height="60">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/sessions">Sessions</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="d-flex align-items-center">
-                <ul class="navbar-nav mb-2 mb-lg-0">
+    <label for="login-password">Password</label>
+    <input type="password" id="login-password" name="login-password" placeholder="Enter your password">
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/register">Register</a>
-                    </li>
+    <button type="submit" class="login-btn">Login</button>
+    <a class="alt-link" href="#register">Don’t have an account? Register</a>
+  </form>
 
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <br><hr><br>
 
-    <!-- Main Content Area -->
-    <main>
+  <!-- Register Form -->
+  <h1>Register</h1>
+  <form>
+    <label for="register-username">Username</label>
+    <input type="text" id="register-username" name="register-username" placeholder="Choose a username">
 
-        <h1>Login to Your Account</h1>
-        <form method="POST" action="/login">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required="">
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required="">
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+    <label for="register-email">Email</label>
+    <input type="email" id="register-email" name="register-email" placeholder="Enter your email">
 
+    <label for="register-password">Password</label>
+    <input type="password" id="register-password" name="register-password" placeholder="Create a password">
 
-    </main>
+    <label for="confirm-password">Confirm Password</label>
+    <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-enter your password">
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <!-- Contact Us Column -->
-                <div class="col-md-4">
-                    <h5>Contact Us!</h5>
-                    <p>somethingsomething@fitness.com</p>
-                    <p>+44 6756 594958</p>
-                    <p><a href="https://facebook.com">Facebook</a></p>
-                    <p><a href="https://twitter.com">Twitter</a></p>
-                    <p><a href="https://instagram.com">Instagram</a></p>
-                    <p><a href="/contact">Send us a message!!</a></p>
-                </div>
-
-                <!-- Company Column -->
-                <div class="col-md-4">
-                    <h5>Company</h5>
-                    <p><a href="/about">About Us!</a></p>
-                    <p><a href="/login">Sign-in as staff</a></p>
-                </div>
-
-                <!-- Accessibility Column -->
-                <div class="col-md-4">
-                    <h5>Accessibility</h5>
-                    <!-- Text Size Modal Trigger -->
-                    <p><a href="#" data-bs-toggle="modal" data-bs-target="#textSizeModal">Text Size</a></p>
-
-                    <!-- Text Size Modal -->
-                    <div class="modal fade" id="textSizeModal" tabindex="-1" aria-labelledby="textSizeModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="textSizeModalLabel">Adjust Text Size</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <label for="textSizeSlider" class="form-label">Text Size (%):</label>
-                                    <input type="range" class="form-range" id="textSizeSlider" min="100" max="500"
-                                        value="100">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Apply</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <script>
-                        // Handle text size changes with the slider
-                        const textSizeSlider = document.getElementById('textSizeSlider');
-                        textSizeSlider.addEventListener('input', function () {
-                            document.body.style.fontSize = textSizeSlider.value + '%';
-                        });
-                    </script>
-
-                    <!-- Dark Mode Toggle -->
-                    <p><a href="#" id="darkModeToggle">Dark Mode</a></p>
-
-                    <script>
-                        // Toggle dark mode
-                        const darkModeToggle = document.getElementById('darkModeToggle');
-                        darkModeToggle.addEventListener('click', function () {
-                            document.body.classList.toggle('dark-mode');
-                        });
-                    </script>
-                    <p><a href="/dark-mode">Dark Mode</a></p>
-                    <p><a href="/accessibility">Accessibility Page</a></p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
-
+    <button type="submit" class="register-btn">Register</button>
+    <a class="alt-link" href="#login">Already have an account? Login</a>
+  </form>
 </body>
-
 </html>
